force-app/main/default/objects/Control_Migracion__c/Control_Migracion__c.object-meta.xml
<CustomObject>
    <label>Control Migracion</label>
    <nameField>
        <label>Control Migracion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Controles Migracion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>