force-app/main/default/objects/Control_Migracion__c/fields/Ano_Fin__c.field-meta.xml
<CustomField>
    <fullName>Ano_Fin__c</fullName>
    <label>Año Fin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>