force-app/main/default/objects/Control_Migracion__c/fields/Ano_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Ano_Inicio__c</fullName>
    <label>Año Inicio</label>
    <length>15</length>
    <type>Text</type>
</CustomField>