force-app/main/default/objects/Control_Migracion__c/fields/Buffer__c.field-meta.xml
<CustomField>
    <fullName>Buffer__c</fullName>
    <label>Buffer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>