force-app/main/default/objects/Control_Migracion__c/fields/Descripcion_Error__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Error__c</fullName>
    <label>Descripción Error</label>
    <type>TextArea</type>
</CustomField>