force-app/main/default/objects/Control_Migracion__c/fields/Fecha_Auxiliar__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Auxiliar__c</fullName>
    <label>Fecha Inicio</label>
    <type>Date</type>
</CustomField>