force-app/main/default/objects/Control_Migracion__c/fields/Fecha_Ejecucion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ejecucion__c</fullName>
    <label>Fecha Ejecución</label>
    <type>DateTime</type>
</CustomField>