force-app/main/default/objects/Control_Migracion__c/fields/Modo__c.field-meta.xml
<CustomField>
    <fullName>Modo__c</fullName>
    <label>Modo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parcial</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Año</fullName>
                <isActive>false</isActive>
                <label>Año</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>