force-app/main/default/objects/Control_Migracion__c/fields/Operacion__c.field-meta.xml
<CustomField>
    <fullName>Operacion__c</fullName>
    <label>Operacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creacion</fullName>
            </value>
            <value>
                <fullName>Actualizacion</fullName>
                <label>Actualización</label>
            </value>
            <value>
                <fullName>Borrado</fullName>
            </value>
            <value>
                <fullName>Ejecución</fullName>
                <isActive>false</isActive>
                <label>Ejecución</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>