force-app/main/default/objects/Control_Migracion__c/fields/Proceso__c.field-meta.xml
<CustomField>
    <fullName>Proceso__c</fullName>
    <label>Proceso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cursos</fullName>
            </value>
            <value>
                <fullName>Encuadramientos</fullName>
            </value>
            <value>
                <fullName>Matriculas</fullName>
            </value>
            <value>
                <fullName>Programas</fullName>
            </value>
            <value>
                <fullName>Alumnos</fullName>
            </value>
            <value>
                <fullName>Program Enrolment</fullName>
            </value>
            <value>
                <fullName>Eventos</fullName>
            </value>
            <value>
                <fullName>Asistentes</fullName>
            </value>
            <value>
                <fullName>Regatas</fullName>
            </value>
            <value>
                <fullName>Tripulaciones Regatas</fullName>
            </value>
            <value>
                <fullName>Cesiones</fullName>
            </value>
            <value>
                <fullName>Cuotas</fullName>
            </value>
            <value>
                <fullName>Licencias</fullName>
            </value>
            <value>
                <fullName>Titulos</fullName>
            </value>
            <value>
                <fullName>Bautismos</fullName>
            </value>
            <value>
                <fullName>Socios</fullName>
            </value>
            <value>
                <fullName>Pagos</fullName>
            </value>
            <value>
                <fullName>Tripulaciones Cesiones</fullName>
            </value>
            <value>
                <fullName>Tripulaciones Bautismos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>