force-app/main/default/objects/Control_Migracion__c/fields/Registros_Erroneos__c.field-meta.xml
<CustomField>
    <fullName>Registros_Erroneos__c</fullName>
    <label>Registros Erroneos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>