force-app/main/default/objects/Control_Migracion__c/fields/Status_Final_Temporal__c.field-meta.xml
<CustomField>
    <fullName>Status_Final_Temporal__c</fullName>
    <label>Status Final Temporal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estado</valueSetName>
    </valueSet>
</CustomField>