force-app/main/default/objects/Control_Migracion__c/fields/Status_Inicial_Temporal__c.field-meta.xml
<CustomField>
    <fullName>Status_Inicial_Temporal__c</fullName>
    <label>Status Inicial Temporal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estado</valueSetName>
    </valueSet>
</CustomField>