force-app/main/default/objects/Control_Migracion__c/fields/Tipo_Error__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Error__c</fullName>
    <label>Tipo Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No encontrado</fullName>
            </value>
            <value>
                <fullName>Consistencia Datos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>