force-app/main/default/objects/Control_Migracion__c/fields/Total_Registros__c.field-meta.xml
<CustomField>
    <fullName>Total_Registros__c</fullName>
    <label>Total Registros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>