force-app/main/default/objects/Control_Migracion__c/fields/Usuario_Ejecucion__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Ejecucion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Ejecucion</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Controles_Migracion</relationshipName>
    <type>Lookup</type>
</CustomField>