force-app/main/default/objects/Control_Migracion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Proceso__c</columns>
    <columns>Operacion__c</columns>
    <columns>Entidad__c</columns>
    <columns>Buffer__c</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_Ejecucion__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proceso__c</field>
        <operation>equals</operation>
        <value>Bautismos</value>
    </filters>
    <label>All</label>
</ListView>